Update examples to use reserved s3 bucket names, instead of placeholder bucket names.

--- a/python/cross_service/textract_comprehend_notebook/TextractAndComprehendNotebook.ipynb
+++ b/python/cross_service/textract_comprehend_notebook/TextractAndComprehendNotebook.ipynb
@@ -80,7 +80,7 @@
     "import pandas as pd\n",
     "import os\n",
     "\n",
-    "bucket = \"DOC-EXAMPLE-BUCKET\"\n",
+    "bucket = \"amzn-s3-demo-bucket\"\n",
     "document = \"Name of your document\"\n",
     "region_name = \"Name of your region\""
    ]
